--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "server": "npx json-server server.json -w -D 500",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -21,6 +22,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "json-server": "^0.17.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
