--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "server": "npx json-server server.json -w -D 500",
     "dev": "vite",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -23,9 +25,11 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.27.0",
     "json-server": "^0.17.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
